fix for missing margin

--- a/src/styles/views/floating-bar.less
+++ b/src/styles/views/floating-bar.less
@@ -265,6 +265,7 @@ floating-bar {
                     > div{
                       float: left;
                       & + div{
+                        display: inline-block;
                         margin-right: 10px;
                       }
                     }
